[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-ask-proxy"
version = "0.1.0"
description = "OpenAI-compatible API proxy for YouTube Ask feature"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "playwright>=1.42.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0.7",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "orjson>=3.9.15",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-playwright>=0.4.4",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
youtube-ask-proxy = "youtube_ask_proxy.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["youtube_ask_proxy*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
